[package]
name = "runner"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tera = { version = "1.19", default-features = false }

[[bin]]
name = "proctor"
path = "src/main.rs"
