[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libproctor"
authors = [
	{ name = "njhlai", email = "nicholasjhlai@gmail.com" },
]
description = "Python library module for LeetCode"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["leetcode"]
namespaces = false
